# dobby.ai

./: .env.example  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  QUICK_START.md  README.md  allowlist.conf  dobby.conf  docker-compose.yml  litellm_config.yaml
assets/: chat.html
docs/: ARCHITECTURE.html
platform_config/: device.conf
skills/clawhub/: SKILL.md
skills/cron/: SKILL.md
skills/github/: SKILL.md
skills/linux/: SKILL.md
skills/memory/: SKILL.md
skills/skill-creator/: SKILL.md
skills/tmux/: SKILL.md
skills/tmux/scripts/: find-sessions.sh  tmux-session.sh
skills/weather/: SKILL.md
src/agent/: agent.c  agent.h  tool_registry.h
src/bus/: CMakeLists.txt  agent_worker.c  agent_worker.h  bus.c  bus.h
src/channels/: CMakeLists.txt  channel.c  channel.h
src/channels/email/: CMakeLists.txt  email_channel.c  email_channel.h
src/channels/whatsapp/: CMakeLists.txt  whatsapp_channel.c  whatsapp_channel.h
src/cli/: CMakeLists.txt  main.c
src/core/: config.c  config.h  dobby.h  log.c  log.h  templates.c  templates.h  types.c  types.h
src/gateway/: CMakeLists.txt  gateway.c  gateway.h
src/heartbeat/: heartbeat.h
src/history/: history.c  history.h
src/memory/: md_memory.c  md_memory.h
src/providers/: http_client.h  provider.h  registry.c
src/providers/openai/: openai.c
src/security/: allowlist.c  allowlist.h
src/session/: CMakeLists.txt  session.c  session.h
src/tools/: CMakeLists.txt  tool.h
src/tools/email/: CMakeLists.txt  email_tool.c  email_tool.h
src/tools/file_ops/: file_tool.c
src/tools/scheduler/: scheduler.c  scheduler.h
src/tools/serial/: serial_tool.c  serial_tool.h
src/tools/shell/: shell_tool.c
src/tools/skills/: skills.c
src/tools/subagent/: CMakeLists.txt  subagent.c  subagent.h
src/tools/whatsapp/: whatsapp_tool.c  whatsapp_tool.h
src/ux/: slash_commands.c  slash_commands.h  typing.c  typing.h
templates/: AGENT.md  HEARTBEAT.md  SOUL.md  TOOLS.md
templates/memory/: MEMORY.md
tests/: CMakeLists.txt  run_tests.sh
tests/email/: README.md  fake_imap_smtp.py  run_integration_test.sh  test_email_parsing  test_email_parsing.c
tests/unit/: test_allowlist.c  test_config.c  test_history.c
